@@ -65,8 +65,8 @@ delegate_get_callback(int fd, void *ctx)
 
 void
 delegate_stock_request(struct hstock *stock, pool_t pool,
-                       const char *helper, const char *path,
-                       const char *content_type,
+                       const char *helper, const char *document_root,
+                       const char *path, const char *content_type,
                        const struct http_response_handler *handler, void *ctx,
                        struct async_operation_ref *async_ref)
 {
@@ -78,7 +78,7 @@ delegate_stock_request(struct hstock *stock, pool_t pool,
     http_response_handler_set(&get->handler, handler, ctx);
 
     delegate_stock_open(stock, pool,
-                        helper, path,
+                        helper, document_root, path,
                         delegate_get_callback, get,
                         async_ref);
 }
