@@ -7,12 +7,20 @@
 #ifndef BENG_DELEGATE_STOCK_H
 #define BENG_DELEGATE_STOCK_H
 
-#include "pool.h"
-
-struct stock_item;
+#include "stock.h"
 
 struct hstock *
 delegate_stock_new(pool_t pool);
+
+void
+delegate_stock_get(struct hstock *delegate_stock, pool_t pool,
+                   const char *path, const char *document_root,
+                   stock_callback_t callback, void *callback_ctx,
+                   struct async_operation_ref *async_ref);
+
+void
+delegate_stock_put(struct hstock *delegate_stock,
+                   struct stock_item *item, bool destroy);
 
 int
 delegate_stock_item_get(struct stock_item *item);
